// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addHeaderCopyLinkButtons only transforms h2 on root level 1`] = `
"<section>
  <figure>
    <h2>this header is not changed since placed in figure</h2>
  </figure>
  <aside>
    <h2>neither does this in an aside</h2>
    <div>Stuff</div>
  </aside>
  <style data-emotion=\\"css 10rgnba-ContainerDiv\\">
    .css-10rgnba-ContainerDiv {
      position: relative;
    }
  </style>
  <div
    data-header-copy-container=\\"true\\"
    data-title=\\"this one is changed to copylinkbutton\\"
    class=\\"css-10rgnba-ContainerDiv e18czas71\\"
  >
    <div>
      <div
        data-tooltip-container=\\"true\\"
        data-tooltip=\\"Kopier lenke til overskriften\\"
      >
        <style data-emotion=\\"css nsj883-IconButton\\">
          .css-nsj883-IconButton {
            position: absolute;
            left: -3em;
            top: 0.1em;
            background: none;
            border: 0;
            z-index: 1;
            -webkit-transition: 0.2s;
            transition: 0.2s;
            opacity: 0;
            color: #777777;
          }
          .css-nsj883-IconButton svg {
            width: 30px;
            height: 30px;
          }
          .e18czas71:hover .css-nsj883-IconButton,
          .css-nsj883-IconButton:focus,
          .css-nsj883-IconButton:focus-visible,
          .css-nsj883-IconButton:active {
            cursor: pointer;
            opacity: 1;
          }</style
        ><button
          data-title=\\"this-one-is-changed-to-copylinkbutton\\"
          aria-label=\\"Kopier lenke til overskriften: this one is changed to copylinkbutton\\"
          data-state=\\"closed\\"
          data-trigger=\\"true\\"
          class=\\"css-nsj883-IconButton e18czas70\\"
        >
          <svg
            fill=\\"currentColor\\"
            aria-hidden=\\"true\\"
            preserveAspectRatio=\\"xMidYMid meet\\"
            height=\\"1em\\"
            width=\\"1em\\"
            class=\\"c-icon\\"
            viewBox=\\"0 0 24 24\\"
            data-license=\\"Apache License 2.0\\"
            data-source=\\"Material Design\\"
            style=\\"vertical-align: middle\\"
          >
            <g>
              <path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"></path>
              <path
                d=\\"M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z\\"
              ></path>
            </g>
          </svg></button
        ><style data-emotion=\\"css oswcx-StyledContent\\">
          .css-oswcx-StyledContent {
            color: #fff;
            z-index: 99999;
            border: 0;
            background: #444;
            border-radius: 4px;
            padding: 6.5px 13px;
            font-family: \\"Source Sans Pro\\", Helvetica, Arial, STKaiti,
              \\"华文楷体\\", KaiTi, SimKai, \\"楷体\\", KaiU, DFKai-SB, \\"標楷體\\",
              SongTi, \\"宋体\\", sans-serif;
            font-size: 16px;
            font-size: 0.8888888888888888rem;
            line-height: 18px;
            line-height: 1.2;
            font-weight: 400;
            text-align: center;
            white-space: normal;
            max-width: calc(100vw - 26px);
          }
        </style>
      </div>
      <h2 id=\\"this-one-is-changed-to-copylinkbutton\\" tabindex=\\"-1\\">
        this one is changed to copylinkbutton
      </h2>
    </div>
  </div>
  <details>
    <summary>Lorem ipsum dolor sit amet...</summary>
    <div data-react-universal-portal=\\"true\\">
      <h2>this is in a details so no change here</h2>
      <div>Stuff</div>
    </div>
  </details>
  <div class=\\"c-bodybox\\">
    <h2>header in bodybox is not changed either</h2>
  </div>
  <p>sdfjljklsdfjlsdf</p>
</section>
"
`;

exports[`htmlTransforms adds display block to math tags 1`] = `
"<html><head></head><body><section>
    <math xmlns=\\"http://www.w3.org/1998/Math/MathML\\" display=\\"block\\">
      <mi>f</mi><mo>'</mo>
      <mfenced><mrow><mn>0</mn><mo>,</mo><mn>5</mn></mrow></mfenced>
      <mo>=</mo><mn>2</mn><mo>·</mo><mn>0</mn><mo>,</mo><mn>5</mn><mo>=</mo><mn>1</mn>
    </math>
    <math xmlns=\\"http://www.w3.org/1998/Math/MathML\\" display=\\"block\\">
      <mn>0</mn><mo>,</mo><mn>5</mn>
    </math>
  </section>
  </body></html>"
`;

exports[`move react portals to bottom 1`] = `
"<html><head></head><body><section>
    <figure>
      <p>Lorem ipsum dolor sit amet...</p>
      
    </figure>
  </section><div data-react-universal-portal=\\"true\\" data-from-article-converter=\\"true\\"><h2>Modal dialog</h2><div>Stuff</div></div></body></html>"
`;

exports[`transformAsides duplicates right column aside for better narrowscreen experience 1`] = `
"<section>
  <figure>
    <p>Lorem ipsum dolor sit amet...</p>
  </figure>
  <aside class=\\"c-aside c-aside--wideScreen\\">
    <div class=\\"c-aside__content\\">
      <h2>Test1</h2>
      <div>Stuff</div>
    </div>
  </aside>
  <p>sdfjljklsdfjlsdf</p>
  <figure>
    <p>Lorem ipsum dolor sit amet...</p>
    <div data-react-universal-portal=\\"true\\">
      <h2>Modal dialog</h2>
      <div>Stuff</div>
    </div>
  </figure>
  <p>sdfjljklsdfjlsdf</p>
  <aside class=\\"c-aside c-aside--narrowScreen\\">
    <div class=\\"c-aside__content\\">
      <h2>Test1</h2>
      <div>Stuff</div>
    </div>
  </aside>
</section>
"
`;

exports[`transformAsides encloses aside duplication to sections 1`] = `
"<section>
  <aside class=\\"c-aside c-aside--wideScreen\\">
    <div class=\\"c-aside__content\\">
      <h2>Test1</h2>
      <div>Stuff</div>
    </div>
  </aside>
  <p>Lorem</p>
  <aside class=\\"c-aside c-aside--narrowScreen\\">
    <div class=\\"c-aside__content\\">
      <h2>Test1</h2>
      <div>Stuff</div>
    </div>
  </aside>
</section>
<section>
  <aside class=\\"c-aside c-aside--wideScreen\\">
    <div class=\\"c-aside__content\\">
      <h2>Test1</h2>
      <div>Stuff</div>
    </div>
  </aside>
  <p>Ipsum</p>
  <aside class=\\"c-aside c-aside--narrowScreen\\">
    <div class=\\"c-aside__content\\">
      <h2>Test1</h2>
      <div>Stuff</div>
    </div>
  </aside>
</section>
"
`;

exports[`transformAsides replaces factAsides with factbox component 1`] = `
"<section>
  <p>Lorem ipsum dolor sit amet...</p>
  <aside class=\\"c-factbox\\">
    <div class=\\"c-factbox__content\\">
      <h2>Test1</h2>
      <div>Stuff</div>
    </div>
    <style data-emotion=\\"css uadqxs-StyledButton-buttonStyle-ButtonStyles\\">
      .css-uadqxs-StyledButton-buttonStyle-ButtonStyles {
        display: inline-block;
        color: #ffffff;
        background-color: #20588f;
        border: 2px solid #20588f;
        border-radius: 4px;
        padding: 4px 13px;
        outline-width: 0;
        cursor: pointer;
        -webkit-text-decoration: none;
        text-decoration: none;
        font-size: 16px;
        font-size: 0.8888888888888888rem;
        line-height: 1.625;
        font-family: \\"Source Sans Pro\\", Helvetica, Arial, STKaiti, \\"华文楷体\\",
          KaiTi, SimKai, \\"楷体\\", KaiU, DFKai-SB, \\"標楷體\\", SongTi, \\"宋体\\",
          sans-serif;
        font-weight: 700;
        -webkit-transition: all 0.2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
        transition: all 0.2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
        box-shadow: none;
        text-align: center;
      }
      .css-uadqxs-StyledButton-buttonStyle-ButtonStyles:hover,
      .css-uadqxs-StyledButton-buttonStyle-ButtonStyles:focus {
        color: white;
        background-color: #184673;
        border: 2px solid #184673;
      }
      .css-uadqxs-StyledButton-buttonStyle-ButtonStyles[disabled] {
        color: #777777;
        background-color: #e6e6e6;
        border-color: transparent;
        cursor: not-allowed;
      }
      .css-uadqxs-StyledButton-buttonStyle-ButtonStyles:focus {
        box-shadow: 0 0 2px #20588f;
      }</style
    ><button
      type=\\"button\\"
      class=\\"
        c-factbox__button c-factbox__button--collapsed
        css-uadqxs-StyledButton-buttonStyle-ButtonStyles
        e1ww3yc20
      \\"
      title=\\"Åpne faktaboks\\"
    ></button
    ><style data-emotion=\\"css uadqxs-StyledButton-buttonStyle-ButtonStyles\\">
      .css-uadqxs-StyledButton-buttonStyle-ButtonStyles {
        display: inline-block;
        color: #ffffff;
        background-color: #20588f;
        border: 2px solid #20588f;
        border-radius: 4px;
        padding: 4px 13px;
        outline-width: 0;
        cursor: pointer;
        -webkit-text-decoration: none;
        text-decoration: none;
        font-size: 16px;
        font-size: 0.8888888888888888rem;
        line-height: 1.625;
        font-family: \\"Source Sans Pro\\", Helvetica, Arial, STKaiti, \\"华文楷体\\",
          KaiTi, SimKai, \\"楷体\\", KaiU, DFKai-SB, \\"標楷體\\", SongTi, \\"宋体\\",
          sans-serif;
        font-weight: 700;
        -webkit-transition: all 0.2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
        transition: all 0.2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
        box-shadow: none;
        text-align: center;
      }
      .css-uadqxs-StyledButton-buttonStyle-ButtonStyles:hover,
      .css-uadqxs-StyledButton-buttonStyle-ButtonStyles:focus {
        color: white;
        background-color: #184673;
        border: 2px solid #184673;
      }
      .css-uadqxs-StyledButton-buttonStyle-ButtonStyles[disabled] {
        color: #777777;
        background-color: #e6e6e6;
        border-color: transparent;
        cursor: not-allowed;
      }
      .css-uadqxs-StyledButton-buttonStyle-ButtonStyles:focus {
        box-shadow: 0 0 2px #20588f;
      }</style
    ><button
      type=\\"button\\"
      class=\\"
        c-factbox__button c-factbox__button--open
        css-uadqxs-StyledButton-buttonStyle-ButtonStyles
        e1ww3yc20
      \\"
      title=\\"Lukk faktaboks\\"
    ></button>
  </aside>
</section>
<aside class=\\"c-factbox\\">
  <div class=\\"c-factbox__content\\">
    <h2>Test2</h2>
    <div>Other stuff</div>
  </div>
  <style data-emotion=\\"css uadqxs-StyledButton-buttonStyle-ButtonStyles\\">
    .css-uadqxs-StyledButton-buttonStyle-ButtonStyles {
      display: inline-block;
      color: #ffffff;
      background-color: #20588f;
      border: 2px solid #20588f;
      border-radius: 4px;
      padding: 4px 13px;
      outline-width: 0;
      cursor: pointer;
      -webkit-text-decoration: none;
      text-decoration: none;
      font-size: 16px;
      font-size: 0.8888888888888888rem;
      line-height: 1.625;
      font-family: \\"Source Sans Pro\\", Helvetica, Arial, STKaiti, \\"华文楷体\\",
        KaiTi, SimKai, \\"楷体\\", KaiU, DFKai-SB, \\"標楷體\\", SongTi, \\"宋体\\",
        sans-serif;
      font-weight: 700;
      -webkit-transition: all 0.2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
      transition: all 0.2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
      box-shadow: none;
      text-align: center;
    }
    .css-uadqxs-StyledButton-buttonStyle-ButtonStyles:hover,
    .css-uadqxs-StyledButton-buttonStyle-ButtonStyles:focus {
      color: white;
      background-color: #184673;
      border: 2px solid #184673;
    }
    .css-uadqxs-StyledButton-buttonStyle-ButtonStyles[disabled] {
      color: #777777;
      background-color: #e6e6e6;
      border-color: transparent;
      cursor: not-allowed;
    }
    .css-uadqxs-StyledButton-buttonStyle-ButtonStyles:focus {
      box-shadow: 0 0 2px #20588f;
    }</style
  ><button
    type=\\"button\\"
    class=\\"
      c-factbox__button c-factbox__button--collapsed
      css-uadqxs-StyledButton-buttonStyle-ButtonStyles
      e1ww3yc20
    \\"
    title=\\"Åpne faktaboks\\"
  ></button
  ><style data-emotion=\\"css uadqxs-StyledButton-buttonStyle-ButtonStyles\\">
    .css-uadqxs-StyledButton-buttonStyle-ButtonStyles {
      display: inline-block;
      color: #ffffff;
      background-color: #20588f;
      border: 2px solid #20588f;
      border-radius: 4px;
      padding: 4px 13px;
      outline-width: 0;
      cursor: pointer;
      -webkit-text-decoration: none;
      text-decoration: none;
      font-size: 16px;
      font-size: 0.8888888888888888rem;
      line-height: 1.625;
      font-family: \\"Source Sans Pro\\", Helvetica, Arial, STKaiti, \\"华文楷体\\",
        KaiTi, SimKai, \\"楷体\\", KaiU, DFKai-SB, \\"標楷體\\", SongTi, \\"宋体\\",
        sans-serif;
      font-weight: 700;
      -webkit-transition: all 0.2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
      transition: all 0.2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
      box-shadow: none;
      text-align: center;
    }
    .css-uadqxs-StyledButton-buttonStyle-ButtonStyles:hover,
    .css-uadqxs-StyledButton-buttonStyle-ButtonStyles:focus {
      color: white;
      background-color: #184673;
      border: 2px solid #184673;
    }
    .css-uadqxs-StyledButton-buttonStyle-ButtonStyles[disabled] {
      color: #777777;
      background-color: #e6e6e6;
      border-color: transparent;
      cursor: not-allowed;
    }
    .css-uadqxs-StyledButton-buttonStyle-ButtonStyles:focus {
      box-shadow: 0 0 2px #20588f;
    }</style
  ><button
    type=\\"button\\"
    class=\\"
      c-factbox__button c-factbox__button--open
      css-uadqxs-StyledButton-buttonStyle-ButtonStyles
      e1ww3yc20
    \\"
    title=\\"Lukk faktaboks\\"
  ></button>
</aside>
<p>Lorem ipsum dolor sit amet...</p>
"
`;

exports[`transformLinksInOembed adds target blank to a if oembed 1`] = `
"<html>
  <head></head>
  <body>
    <section>
      <a href=\\"https://external.com\\" target=\\"_blank\\"
        >Lorem ipsum dolor sit amet...</a
      >
    </section>
  </body>
</html>
"
`;

exports[`transformTables replaces table with <Table> 1`] = `
"<div class=\\"c-table__wrapper\\">
  <div class=\\"c-table__content\\">
    <div class=\\"c-table__left-shadow\\"></div>
    <table id=\\"testid\\" class=\\"c-table o-table\\">
      <thead>
        <tr>
          <th>test</th>
          <th>test</th>
          <th>test</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>test</td>
          <td>test</td>
          <td>test</td>
        </tr>
        <tr>
          <td>test</td>
          <td>test</td>
          <td>test</td>
        </tr>
        <tr>
          <td>test</td>
          <td>test</td>
          <td>test</td>
        </tr>
      </tbody>
    </table>
    <div class=\\"c-table__right-shadow\\"></div>
  </div>
</div>
"
`;
